# doc-search-lite

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.en.md  README.md  README.zh.md  docker-entrypoint.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: launch-hn.md  launch-v2ex.md
src/: __init__.py  __main__.py  api.py  cli.py  mcp_server.py
src/agent/: AGENTS.md  __init__.py  analysis_agent.py  base.py  llm_client.py  query_decomposer.py  search_agent.py  skill_loader.py  sufficient_context.py  tool_types.py
src/agent/tools/: __init__.py  analyze.py  bash.py  grep.py  read.py  rerank.py  search.py  summarize.py
src/converter/: AGENTS.md  __init__.py  archive.py  base.py  coordinator.py  csv.py  frontmatter.py  headings.py  html.py  image.py  msg.py  ocr.py  ocr_postprocess.py  office.py  pdf.py  table_fix.py  tag_extractor.py  text.py
src/search/: AGENTS.md  __init__.py  ab_testing.py  benchmark.py  bm25_search.py  hybrid.py  local_reranker.py  multi_index.py  query_parser.py  query_router.py  report.py  reranker.py  result_formatter.py  unified.py
src/security/: AGENTS.md  __init__.py  desensitizer.py  maskers.py
src/stats/: AGENTS.md  __init__.py  alerting.py  budget_guard.py  diagnostics.py  memory.py  reporter.py  search_logger.py  usage_tracker.py
src/storage/: AGENTS.md  __init__.py  base.py  chunker.py  convert_db.py  index.py  markdown_store.py  metadata.py  raw_store.py
src/utils/: AGENTS.md  __init__.py  config.py  dir_diff.py  file_watcher.py  hash.py  password_dict.py
src/watch/: AGENTS.md  __init__.py  index_watcher.py
src/web/: AGENTS.md  __init__.py  auth.py  intent_classifier.py  review_prompts.py  session_manager.py  session_store.py  sse_events.py  upload_manager.py
src/web/static/: app.js  i18n.js  index.html  style.css
tests/: AGENTS.md  conftest.py  test_ab_testing.py  test_agent_analysis.py  test_agent_base.py  test_agent_convergence_nudge.py  test_agent_llm.py  test_agent_memory.py  test_agent_query_analysis.py  test_agent_react_prompt.py  test_agent_search.py  test_agent_tool_feedback.py  test_agent_tools_analyze.py  test_agent_tools_grep.py  test_agent_tools_read.py  test_agent_tools_rerank.py  test_agent_tools_search.py  test_agent_tools_summarize.py  test_agent_verification_loop.py  test_alerting.py  test_api_admin.py  test_api_phase3.py  test_api_query.py  test_api_search_modes.py  test_api_sessions_db.py  test_archive_converter.py  test_auth_log.py  test_benchmark.py  test_benchmark_regression.py  test_budget_guard.py  test_catalog_repair.py  test_chunker.py  test_cli.py  test_converter_coordinator.py  test_converter_html.py  test_converter_integration.py  test_converter_ocr.py  test_converter_office.py  test_converter_pdf.py  test_desensitization.py  (+40 more)
tests/fixtures/: session_qa_data.jsonl
