[project]
name = "doc-search-lite"
version = "0.21.0"
description = "Local document intelligent search system — convert, index, and search with LLM agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT License"}
authors = [
    {name = "rick qi", email = "rickqi@users.noreply.github.com"},
]
keywords = [
    "document-search", "full-text-search", "bm25", "tantivy",
    "rag", "agent", "llm", "document-conversion", "ocr",
    "chinese-search", "knowledge-base",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Office/Business",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: Chinese (Simplified)",
    "Natural Language :: English",
]
dependencies = [
    "click>=8.0",
    "markitdown[docx,xlsx,pptx]>=0.1.6,<0.2",
    "tantivy>=0.22",
    "litellm>=1.90.0,<2.0.0",
    "pyyaml>=6.0",
    "zai-sdk>=0.2.3",
    "python-dotenv>=1.2.2",
    "olefile>=0.47",
    "py7zr>=1.1.3",
    "rarfile>=4.0",
    "fastapi>=0.100",
    "python-multipart>=0.0.5",
    "uvicorn[standard]>=0.20",
    "pydantic>=2.0",
    "httpx>=0.28.1",
    "rich>=13.0",
    "watchdog>=4.0",
    # Document processing
    "pdfplumber>=0.10",
    "pypdf>=4.0",
    "jieba>=0.42",
    # Data processing (used in converter/csv.py)
    "pandas>=2.0,<3.0",
]

[project.optional-dependencies]
tui = [
    "textual>=0.40",
]
mcp = [
    "mcp>=1.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "python-docx>=0.8",
    "python-pptx>=0.6",
    "openpyxl>=3.0",
]
ocr = [
    "paddleocr>=3.6",
    "paddlepaddle-gpu>=2.6; platform_system == 'Linux'",
]

[project.urls]
Homepage = "https://github.com/rickqi/doc-search-lite"
Repository = "https://github.com/rickqi/doc-search-lite"
Issues = "https://github.com/rickqi/doc-search-lite/issues"
Documentation = "https://github.com/rickqi/doc-search-lite#readme"

[project.scripts]
doc-search-lite = "src.cli:cli"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

# ── Pytest ────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring real filesystem operations",
    "e2e: marks end-to-end tests",
]

# ── Coverage ──────────────────────────────────────────
[tool.coverage.run]
source = ["src"]
omit = [
    "src/tui.py",
    "*/__init__.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 70
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

# ── Ruff ──────────────────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # Do not perform function call in argument defaults (Click pattern)
    "SIM108", # Use ternary instead of if-else (readability)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# ── Mypy (progressive) ──────────────────────────────
[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
strict_optional = true
ignore_missing_imports = true
check_untyped_defs = false
disallow_untyped_defs = false
# Existing codebase has many implicit Optional and untyped returns —
# switch to strict mode gradually, not all at once.
no_implicit_optional = false
warn_return_any = false

[[tool.mypy.overrides]]
module = [
    "src.cli",
    "src.api",
    "src.mcp_server",
    "src.converter.*",
    "src.web.*",
    "src.stats.*",
    "tests.*",
]
ignore_errors = true
